# metting

./: .env-example  .gitignore  README.md  design.md  no_file.md  prd.md  pyproject.toml  pytest.ini
config/: settings.toml
docs/: simple_ui.html
examples/: meeting_arch_review.json
meeting/: __init__.py  config.py
meeting/api/: server.py
meeting/cli/: run_meeting.py
meeting/domain/: artifacts.py  context_builder.py  models.py  pause_resume.py  state_machine.py  termination.py  validators.py
meeting/runners/: base.py  langchain_runner.py
meeting/storage/: repo.py  schema.sql
tests/: conftest.py  test_consensus.py  test_context_builder_layered.py  test_parallel_selection.py  test_role_output.py  test_round_summary.py  test_storage_memory.py  test_storage_summaries.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: MarkdownBlock.tsx  MermaidBlock.tsx  mode-toggle.tsx  theme-provider.tsx
web/src/components/pages/: StageView.tsx
web/src/components/panels/: EventStreamPanel.tsx  MeetingsPanel.tsx  MemoriesPanel.tsx  RunControlPanel.tsx  RunsPanel.tsx  SummariesPanel.tsx
web/src/components/ui/: textarea.tsx
web/src/lib/: api.ts  format.ts  types.ts
